fixed #20: missing space before text

--- a/source/css/_partial/unique.styl
+++ b/source/css/_partial/unique.styl
@@ -140,12 +140,13 @@
 
 #search
   float left
-
-#search-icon
-  float bottom
+  width 8em
+  display inline-block
+  padding-right 1em
 
 #search-input
   padding-left 0.3em
+  width 6em
   height 1em
   display inline
   border none
